--- a/layouts/partials/widgets/awards.html
+++ b/layouts/partials/widgets/awards.html
@@ -11,16 +11,12 @@
   <div class="col-12 col-lg-9 section-heading">
       <tr>
         <th scope="row"><b>[2021，2022]</b></th>
-        <td>&nbsp;&nbsp;&nbsp;&nbsp; Tecent Scholarship, Tencent Ltd. <br />
-            &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; (腾讯奖学金, <b>Top 2%</b> in Sat Yet-Sen University, Two Times.)</td>
+        <td>&nbsp;&nbsp;&nbsp;&nbsp; Tecent Scholarship, Tencent Ltd. (腾讯奖学金, <b>Top 2%</b> in SYSU, Two Times)</td>
       </tr>
       <br />
       <tr>
         <th scope="row"><b>[Fall, 2018]</b></th>
-        <td>&nbsp;&nbsp;&nbsp;&nbsp; Undergraduate National Scholarship, Ministry of Education of China. <br />
-            &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; (<b>Top 2%</b> in Sat Yet-Sen University.)</td>
+        <td>&nbsp;&nbsp;&nbsp;&nbsp; Undergraduate National Scholarship, Ministry of Education of China. (<b>Top 2%</b> in SYSU)</td>
       </tr>
   </div>
 </div>
