--- a/layouts/section/blog.html
+++ b/layouts/section/blog.html
@@ -12,11 +12,9 @@
   <div class="card-simple">
     <font color=#808B96>Category:</font>
     <span class="article-categories">
-      <a href="../categories/research">[Research]</a>
-      <a href="../categories/tech">[Tech]</a>
-      <a href="../categories/finance">[Finance]</a>
-
-      <a href="../categories/life">[Life]</a>
+      <a href="../categories/finance">[财务管理]</a>
+      <a href="../categories/finance">[程序开发]</a>
+      <a href="../categories/finance">[终身学习]</a>
     </span>
   </div>
 
