--- a/layouts/section/blog.html
+++ b/layouts/section/blog.html
@@ -12,9 +12,10 @@
   <div class="card-simple">
     <font color=#808B96>Category:</font>
     <span class="article-categories">
-      <a href="../categories/finance">[财务管理]</a>
-      <a href="../categories/finance">[程序开发]</a>
-      <a href="../categories/finance">[终身学习]</a>
+      <a href="../categories/ai">[人工智能]</a>
+      <a href="../categories/coding">[程序开发]</a>
+      <a href="../categories/finance">[财务知识]</a>
+      <a href="../categories/learning">[终身学习]</a>
     </span>
   </div>
 
