--- a/layouts/partials/widgets/news.html
+++ b/layouts/partials/widgets/news.html
@@ -8,20 +8,15 @@
       <h1>{{ with $st.Title }}{{ . | markdownify | emojify }}{{ end }}</h1>
       {{ with $st.Params.subtitle }}<p>{{ . | markdownify | emojify }}</p>{{ end }}
   </div>
-  <div class="col-12 col-lg-8 section-heading">
+  <div class="col-18 col-lg-12 section-heading">
       <tr>
         <th scope="row"><b>[Dec, 2021]</b></th>
-        <td>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; Two papers get accepted by <b>AAAI 2022</b>.</td>
+        <td>&nbsp;&nbsp;&nbsp;&nbsp; Two papers get accepted by <b>AAAI 2022</b>. The codes of ours proposed SST and SARB are <a href='https://github.com/HCPLab-SYSU/HCP-MLR-PL'>available</a>.</td>
       </tr>
       <br />
       <tr>
         <th scope="row"><b>[Nov, 2021]</b></th>
-        <td>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; One paper gets accepted by <b>T-PAMI</b>.</td>
-      </tr>
-      <br />
-      <tr>
-        <th scope="row"><b>[Mar, 2021]</b></th>
-        <td>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; One paper gets accepted by <b>ICRA 2021</b>.</td>
+        <td>&nbsp;&nbsp;&nbsp;&nbsp; One paper gets accepted by <font color=#FF0000><b>T-PAMI</b></font>. The codes of ours proposed AGRA and CD-FER benchmark are <a href='https://github.com/HCPLab-SYSU/CD-FER-Benchmark'>available</a>.</td>
       </tr>
   </div>
 </div>
