--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,5 +1,5 @@
 <script src="https://utteranc.es/client.js"
-  repo="mscipio/TaoPu"
+  repo="puta537/TaoPu"
   issue-term="pathname"
   label="Comment"
   theme="github-light"
