--- a/layouts/section/blog.html
+++ b/layouts/section/blog.html
@@ -31,6 +31,15 @@
   {{ end }}
 
   {{ partial "pagination" . }}
+  
+  <script src="https://utteranc.es/client.js"
+  repo="puta537/TaoPu"
+  issue-term="pathname"
+  label="Comment"
+  theme="github-light"
+  crossorigin="anonymous"
+  async>
+  </script>
 
 </div>
 
